cros: Prevent showing menu after icon moves.

An app icon can be moved while the callback is being processed.
Detect this and dont show the menu in this case.

Bug: 878159
Change-Id: I29162449767f865cffc543e13f163e08bfa61cdb
Reviewed-on: https://chromium-review.googlesource.com/1195709
Reviewed-by: Weidong Guo <weidongg@chromium.org>
Commit-Queue: Alex Newcomer <newcomer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#587378}
Former-commit-id: 5a972ee73d18c8ea803b105b21c6874b77ab3286